# funnel-analytics-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
.github/: FUNDING.yml
funnel_analytics_agent/: __init__.py  __main__.py  baseline.py  brief.py  mcp_server.py  milestones.py  notifier.py  retro.py  summarizer.py
funnel_analytics_agent/sources/: __init__.py  agent_spend.py  base.py  buildquality.py  github_stars.py  hyperdx.py  openpanel.py  producthunt.py  supabase.py  vercel.py  vibex.py
scripts/: install-cron.sh
tests/: test_baseline.py  test_brief.py  test_cross_agent_sources.py  test_github_stars_source.py  test_mcp_server.py  test_milestones.py  test_notifier.py  test_retro.py  test_sources.py  test_summarizer.py  test_v02_sources.py  test_vibex_source.py
