[project]
name = "funnel-analytics-agent"
version = "0.10.0"
description = "Daily morning brief + real-time anomaly alerts across Vercel / OpenPanel / HyperDX / Supabase / Product Hunt for indie launches."
authors = [{ name = "Alex Ji", email = "alex@vibexforge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "solo-founder-os>=0.5.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
keywords = ["analytics", "monitoring", "vercel", "product-hunt", "supabase", "indie", "claude"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "anthropic>=0.40", "mcp>=1.0"]

[project.scripts]
funnel-analytics-agent = "funnel_analytics_agent.__main__:main"
funnel-analytics-mcp = "funnel_analytics_agent.mcp_server:main"

[project.urls]
Repository = "https://github.com/alex-jb/funnel-analytics-agent"
Issues = "https://github.com/alex-jb/funnel-analytics-agent/issues"
Homepage = "https://github.com/alex-jb/funnel-analytics-agent"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["funnel_analytics_agent", "funnel_analytics_agent.sources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line-length: docstrings + log messages run long; not a bug
    "E731",  # lambda-assignment: idiomatic in tests
    "E402",  # module-level import not at top: __future__ + sys.path tricks
    "E702",  # multiple-statements-on-one-line: idiomatic in test fixtures
    "E741",  # ambiguous-variable-name: short loop vars are fine in context
]
